--- a/app/public/mainMenu.html
+++ b/app/public/mainMenu.html
@@ -29,9 +29,9 @@
 	<div class="collapse navbar-collapse js-navbar-collapse">
 		<ul class="nav navbar-nav">
 			<li><a href="#!Dashboard">Home</a></li>
-			<li><a href="#!EMICalculator">Queries</a></li>
-			<li><a href="#!EMICalculator">User`s Details</a></li>
-			<li><a href="#!EMICalculator">Department`s Details</a></li>
+			<li><a href="#!QueryForm">Queries</a></li>
+			<li><a href="#!UsersDetails">User`s Details</a></li>
+			<li><a href="#!DepartmentDetails">Department`s Details</a></li>
 		</ul>
         <ul class="nav navbar-nav navbar-right">
        <li class="dropdown">
