--- a/app/index.html
+++ b/app/index.html
@@ -13,13 +13,14 @@
 		<script src="angular/angular-route.min.js"></script>
 		<script src="angular/angular-sanitize.min.js"></script>
 		<script src="angular/ui-bootstrap-tpls.min.js"></script>
+		<script src="angular/ng-file-upload.min.js"></script>
 		<script src="angular/main.js"></script>
 		<script src="scripts/Controllers/LoginController.js"></script>
 	</head>
 	<body ng-app="Ticketing">
-		 <div class="container-fluid"><h2><a href="#" class="navbar-brand"><b style="color:red;font-size:2.5rem;">I</b><b style="color:black;font-size:2.5rem;">TEC</b></a></h2></div>
+		 <!-- <div class="container-fluid"><h2><a href="#" class="navbar-brand"><b style="color:red;font-size:2.5rem;">I</b><b style="color:black;font-size:2.5rem;">TEC</b></a></h2></div> -->
 		 
-<div id="mainMenu" ng-include="'public/mainMenu.html'"></div> 
+<!-- <div id="mainMenu" ng-include="'public/mainMenu.html'"></div>  -->
 		<div ng-view></div>
 	</body>
 </html>
